9-23-2023

================================
Change log notes
================================

Linux v2.42.1 | macOS v2.42.1 Termux v2.42.1
Added a check to install.sh to check and see if running as root.

Linux v2.42 | macOS v2.42 Termux v2.42
Added a test directory. I changed the Automated install commands.

Linux:
if [ -d /tmp/yt-playlist/ ]; then yes|rm -R /tmp/yt-playlist/; fi; git clone https://github.com/darnrain/yt-playlist.git /tmp/yt-playlist/; sudo chmod +x /tmp/yt-playlist/yt-playlist-linux/install.sh; /tmp/yt-playlist/yt-playlist-linux/install.sh --main

macOS:
if [ -d /tmp/yt-playlist/ ]; then yes|rm -R /tmp/yt-playlist/; fi; git clone https://github.com/darnrain/yt-playlist.git /tmp/yt-playlist/; sudo chmod +x /tmp/yt-playlist/yt-playlist-macos/install.sh; /tmp/yt-playlist/yt-playlist-macos/install.sh --main

Termux:
if [ -d ${TMPDIR}/yt-playlist/ ]; then yes|rm -R ${TMPDIR}/yt-playlist/; fi; if ! command -v git; then pkg install git; fi; git clone https://github.com/darnrain/yt-playlist.git ${TMPDIR}/yt-playlist/; chmod +x ${TMPDIR}/yt-playlist/yt-playlist-termux/install.sh; ${TMPDIR}/yt-playlist/yt-playlist-termux/install.sh --main


Linux v2.41 | macOS v2.41.1 Termux v2.40.1
Fixed HW GPU on Play SD menu macos.

Linux v2.41 | macOS v2.41 Termux v2.40.1
Added to the Play HD menu.
8) Max cache size 640MB.
9) Max cache size 1280MB.
10) Max cache size 2560MB.

Linux v2.40.1 | macOS v2.40.1 | Termux v2.40.1
Small update, uninstall.sh will now remove ~/.config/yt-playlist/scripts/ 

Linux v2.40 | macOS v2.40 | Termux v2.40
I was able to speed up yt-dlp by adding the argument -N4
Added a cache wait time to the Play HD menu of 120 seconds. This should help smooth out the starting of hd videos.

Linux v2.39 | macOS v2.39.1 | Termux v2.39
Fixed macOS Automated installer.

Linux v2.39 | macOS v2.39 | Termux v2.39
macOS version is out of beta now. I got it working as good as it's going to get.