@@ -1,5 +1,10 @@
 #!/usr/local/bin/bash
 
+	if [ "$EUID" == "0" ]
+	then echo "Please do not run as root"
+  	exit
+	fi
+
      	if command -v yt-playlist >/dev/null
      	then
         echo "============================"
