@@ -4,6 +4,9 @@
 Change log notes
 ================================
 
+Linux v2.42.2 | macOS v2.42.2 Termux v2.42.2
+Added a check to uninstall.sh to check and see if running as root.
+
 Linux v2.42.1 | macOS v2.42.1 Termux v2.42.1
 Added a check to install.sh to check and see if running as root.
 
